# Bravais

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRD.md  Packages.md  PackagesMissing.md  README.md  REUSE.toml  TODO.md  bravais-next.md  bravais-next.texi  flake.nix  oo7.texi  system.nix
.antigravitycli/: d1a91bac-08a0-4890-80e0-b11df5803404.json
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
bravais-mcp/: .gitignore  Cargo.toml
bravais-mcp/bravais-mcp/: Cargo.toml
bravais-mcp/bravais-mcp-server/: Cargo.toml
bravais-mcp/data/: mappings.toml
bravais-mcp/libbravais-mcp/: Cargo.toml
bravais-mcp/libbravais-mcp/src/: lib.rs
flakes/rapg/: flake.nix
hosts/: common.nix
hosts/bravais/: default.nix
hosts/thinkpad/: default.nix
lib/: colors.nix  default.nix  terminal-theme.nix
modules/compat/: appimage.nix  default.nix
modules/core/: audio.nix  boot.nix  brush-wrapper.nix  default.nix  dns.nix  keyring.nix  locale.nix  memory.nix  nix-tmp.nix  nix.nix  security.nix
modules/desktops/: assertions.nix  cosmic.nix  default.nix  gnome.nix  leftwm.nix  niri.nix  plasma.nix  shared.nix
modules/hardware/: audio-led.nix  bluetooth.nix  default.nix  fingerprint.nix  intel.nix
modules/login/: default.nix
modules/platform/: default.nix  x86-64.nix
modules/services/: chrome-remote-desktop.nix  default.nix  ollama.nix  podman.nix
modules/theme/: dark-mode.nix  default.nix  fonts.nix
pkgs/: default.nix  update-vendored.nu
pkgs/bravais-mcp/: package.nix
pkgs/chrome-remote-desktop/: package.nix
users/mj/: apps.nix  (+8 more)
(+17 files in other folders)
