# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "libbravais-mcp"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
jiff = "0.1" # Modern tz-aware time
shlex = "1.3" # Tokenizer
owo-colors = "4.0" # TTY colors
regex = "1.10"

